--- a/src/Page11.css
+++ b/src/Page11.css
@@ -8,7 +8,7 @@
     padding: 30px 10px;
     font-family: "Segoe UI", sans-serif;
     /* margin-top: 20px; */
-    height: 350px;
+    /* height: 350px; */
     /* margin-bottom: 20px; */
 
   }
