--- a/src/Page20.css
+++ b/src/Page20.css
@@ -1,13 +1,13 @@
 .page20-container {
-    background-color: #F7F7F7; 
-    text-align: center;
-    padding: 30px 10px;
-    font-family: "Segoe UI", sans-serif;
-    margin-top: 20px;
-    height: 350px; 
-    margin-bottom: 20px;
-  }
-  
+  background-color: #F7F7F7; 
+  text-align: center;
+  padding: 30px 10px;
+  font-family: "Segoe UI", sans-serif;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
 .page20-container p,
 .page20-container h1,
 .page20-container h2,
@@ -65,14 +65,18 @@
   }
   
   .store-buttons1 {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 15px;
-  }
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 40%; 
+}
+
+
   
   .button-wrapper1 {
     position: relative;
+  margin-top: 40%; 
+
   }
   
   .store-button1 {
