--- a/src/Page23.css
+++ b/src/Page23.css
@@ -19,20 +19,22 @@
     border-radius: 20px;
     width: 98%;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Cambo', serif;
   }
   
   .subscribe-section h2 {
-    font-size: 40px;
-    font-weight: bold;
+    font-size: 50px;
+    font-weight: 200px;
     margin-bottom: 10px;
+    font-family: 'Cambo', serif;
+
   }
   
   .subscribe-section p {
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 30px;
-    font-family: 'Segoe UI', sans-serif;
+    font-family: 'Cambo', serif;
   }
   
   .subscribe-form {
