--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
+  /* position: fixed; */
 }
 
 .app-container {
@@ -64,7 +65,7 @@ body {
 }
 
 .nav-links a:hover {
-  background-color: #e0e0e0;
+  background-color: #CFF6FF;
 }
 
 .nav-links a.active {
@@ -90,11 +91,11 @@ body {
 }
 
 .auth-buttons .login {
-  background-color: rgb(0, 153, 255);
+  background-color: #0CBAE0;
   color: white;
 }
 
 .auth-buttons button:hover {
-  background-color: #0056b3;
+  background-color: #1ac2e7;
   color: white;
 }
