--- a/src/Page1.css
+++ b/src/Page1.css
@@ -1,4 +1,5 @@
-.page1-container {
+.page01-container {
+  position: relative;
   width: 100%;
   min-height: 100vh;
   background-size: cover;
@@ -9,23 +10,29 @@
   padding-left: 20px; 
   box-sizing: border-box;
   background-blend-mode: lighten;
-  margin-bottom: 0%;
+  margin-top: 20%;
   overflow: hidden;
+  padding-top: 0%;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1;
 }
-.page1-container::before {
+
+.page01-container::before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 110%;
   background-image: url('./page1bg.png');
-  background-size: cover;
+  background-size: 150%;
   background-position: center;
-  filter: blur(10px);
-  z-index: 0;
-  opacity: 0.7;
+  filter: blur(-4px);          
+  opacity: 0.1;              
+  z-index: -1;                
 }
+
+
 .page1-content {
   display: flex;
   flex-direction: column-reverse;
@@ -43,18 +50,29 @@
   font-size: 4rem;
 }
 
+/* Updated font styling for Plan, Organise, Connect */
 .text-section h1 {
-  font-size: 38px;
-  font-weight: bold;
-  margin: 10px 0;
+  font-family: 'Cambo', serif;
+  margin: 0;
+  line-height: 1.1;
 }
 
 .text-section h1:first-child {
   color: rgb(15, 189, 233);
+  font-size: 85px;
+  font-weight: 400;
 }
 
-.text-section h1:not(:first-child) {
+.text-section h1:nth-child(2) {
   color: black;
+  font-size: 68px;
+  font-weight: 400;
+}
+
+.text-section h1:nth-child(3) {
+  color: black;
+  font-size: 68px;
+  font-weight: 400;
 }
 
 .text-section p {
@@ -90,8 +108,14 @@
     padding-left: 40px;
   }
 
-  .text-section h1 {
-    font-size: 48px;
+  /* Updated font sizing for responsive design */
+  .text-section h1:first-child {
+    font-size: 95px;
+  }
+
+  .text-section h1:nth-child(2),
+  .text-section h1:nth-child(3) {
+    font-size: 78px;
   }
 
   .text-section p {
