--- a/src/Page17.css
+++ b/src/Page17.css
@@ -14,6 +14,7 @@
   padding-left: 20px;
   overflow: hidden;
   z-index: 1;
+  /* border-radius: 30px 30px 30px 35px; */
 }
 
 .page17-left-section::before {
@@ -27,6 +28,8 @@
   filter: blur(8px);
   opacity: 0.8;
   z-index: 0;
+    border-radius: 30px 30px 30px 35px;
+
 }
 
 
