--- a/src/pages/Aboutus.css
+++ b/src/pages/Aboutus.css
@@ -68,7 +68,9 @@
   max-width: 100%;
   height: auto;
 /* background-color: transparent;   */
-margin-right: 20%;
+margin-right: -20%;
+/* padding-right: -40%; */
+padding-left: -20%;
 }
 
 @media (max-width: 768px) {
