--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'SF Pro';
   overflow-x: hidden;
   /* position: fixed; */
 }
@@ -77,22 +77,32 @@ body {
   display: flex;
   align-items: center;
   margin-right: 20px;
+    font-family: 'SF Pro';
+
 }
 
 .auth-buttons button {
   background-color: transparent;
   color: black;
   border: none;
-  padding: 10px 20px;
+  padding: 8px 26px;
   margin-left: 10px;
-  border-radius: 10px;
+  border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
+    font-family: 'SF Pro';
+        font-size: 1.2rem;
+
+
 }
 
 .auth-buttons .login {
   background-color: #0CBAE0;
-  color: white;
+  color: black;
+    font-family: 'SF Pro';
+    font-size: 1.2rem;
+    font-weight: 600;
+
 }
 
 .auth-buttons button:hover {
