--- a/src/Page12.css
+++ b/src/Page12.css
@@ -21,6 +21,11 @@
   z-index: 1;
   border-radius: 10px;
 } */
+ /* .curve {
+  border-radius: 20%;
+  background-color: red;
+  w
+ } */
 
 .page12-left-section {
   width: 78%;
