--- a/src/Page4.css
+++ b/src/Page4.css
@@ -42,11 +42,13 @@
   
   .with-text {
     color: grey;
-    font-size: 55px;
-    font-weight: bold;
+    font-size: 60px;
+    font-weight: normal;
     margin: 0;
-    margin-left: -95px;
+    margin-left: -120px;
     margin-top: -5px;
+   font-family: 'Cambo',serif;
+
   }
   
   .logo-line {
@@ -57,15 +59,21 @@
   }
   
   .logo-img {
-    height: 40px;
+    height: 50px;
     width: auto;
+    margin-left: 1%;
+
   }
   
   .fragment-text {
-    font-size: 45px;
+    font-size: 50px;
     color: black;
-    font-weight: 600;
+    font-weight: 200;
     margin: 0;
+    font-family: 'Cambo',serif;
+    line-height: 1rem;
+    letter-spacing: 0rem;
+
   }
   
   .create-line {
@@ -74,22 +82,26 @@
   }
   
   .side-img {
-    max-width: 100%;
+    max-width: 70%;
     height: auto;
     display: block;
-    margin-top: -22px;
+    margin-top: -5px;
+
   }
   
   .create-text {
     position: absolute;
-    top: 22%;
-    left: 60%;
+    top: 40%;
+    left: 50%;
     right:0;
     transform: translateY(-50%);
-    font-size: 100px;
+    font-size: 110px;
     font-weight: bold;
     color: #3FD1F1;
     white-space: nowrap;
+    font-family: 'Cambo',serif;
+      /* letter-spacing: 0.4rem; */
+
   }
   
   @media (max-width: 768px) {
