--- a/src/Page6.css
+++ b/src/Page6.css
@@ -1,58 +1,68 @@
 .page6-container {
   display: flex;
   width: 100%;
-  height: 80vh;
+  height: auto; /* Changed from 80vh to auto */
   box-sizing: border-box;
 }
 
-.left-section {
+.left-section6 {
   width: 30%;
   background-color: white;
 }
 
-.right-section {
+.right-section6 {
   width: 70%;
   background-color: #C3F1FB;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  padding: 40px 60px;
-  gap: 20px;
-  position: relative;
+  justify-content: flex-end;
+  overflow: hidden;
+  height: fit-content; /* Make height match image */
+  padding: 0; /* Remove padding to avoid extra space */
 }
 
 .frame-img {
-  width: 100%;
+  width: 90%;
   height: auto;
+  object-fit: contain;
+  margin: 0; 
+  /* margin-left: 60%; */
+  /* left: 20%; */
+  margin-right: -0%;
 }
 
 .follow-text {
   font-size: 90px;
   font-weight: bold;
-  color:#3FD1F1;
-  margin-left: 500px;
-  margin-top: -400px;
+  color: #3FD1F1;
+  margin: 0 auto;
+  position: absolute;
+  right: 110px;
+  font-family: 'Cambo', serif;
 }
 
+/* Responsive */
 @media (max-width: 768px) {
   .page6-container {
     flex-direction: column;
     height: auto;
   }
 
-  .left-section,
-  .right-section {
+  .left-section6,
+  .right-section6 {
     width: 100%;
   }
 
   .follow-text {
     font-size: 60px;
-    margin-left: 0;
-    margin-top: 20px;
+    position: static;
+    text-align: center;
+    margin: 20px auto;
   }
 
   .frame-img {
     width: 100%;
     max-width: 100%;
+    height: auto;
   }
 }
