--- a/src/Page12.css
+++ b/src/Page12.css
@@ -1,8 +1,9 @@
 .page12-container {
   display: flex;
-  width: 100%;
+  width: 100%; 
   height: fit-content;
-  overflow: hidden;
+  overflow: visible; 
+  background-color: rgb(54, 58, 95); 
 }
 
 .dark-margin {
@@ -10,118 +11,113 @@
   background-color: #363a5f;
 }
 
-/* .page12-left-section {
-  width: 78%;
+.page12-content {
+  width: 70%; 
   position: relative;
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 40px;
-  overflow: hidden; 
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px 20px 20px 20px;
+  overflow: visible;
   z-index: 1;
-  border-radius: 10px;
-} */
- /* .curve {
-  border-radius: 20%;
-  background-color: red;
-  w
- } */
-
-.page12-left-section {
-  width: 78%;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  padding-right: 40px;
-  overflow: hidden; 
-  z-index: 1;
-  border-radius: 20px; 
-  overflow: hidden; 
+  border-radius: 10px 10px 0 0;
 }
 
-
-.page12-left-section::before {
+.page12-content::before {
   content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  inset: 0;
   background-image: url('./page1bg.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  filter: blur(8px); 
-  opacity: 0.8; 
+  filter: blur(8px);
+  opacity: 0.8;
   z-index: 0;
+  clip-path: inset(0 0 0 0 round 10px 10px 0 0);
 }
 
-
 .page12-right-section {
-  width: 30%;
-  background-color: #363a5f;
+  width: 35%; 
+  background-color: rgb(54, 58, 95); 
+  border-radius: 0 0 20px 20px; 
+}
+
+.page12-right-section-inner {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(54, 58, 95); 
 }
 
 .logo-image {
-  position: absolute;
-  top: 70px;
-  left: 40px;
+  top: 30px;
+  position: relative;
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: -20px; 
   z-index: 10;
+  width: 100%;
 }
 
 .logo-img12 {
-  height: 60px;
-  width: 60px;
+  height: 55px;
+  width: 150px;
   object-fit: contain;
+  gap: 0px;
+  margin-right: -15px;
 }
 
 .fragmentb {
-  font-size: 70px;
+  font-size: 60px;
   font-weight: 400;
-  color: #1c1c1c;
-  font-family: serif;
-  letter-spacing: 3px;
+  color: Black;
+  font-family: 'Cambo', serif;
+  letter-spacing: 1px;
+  margin-left: -15px; 
 }
 
 .page12-image-wrapper {
   position: relative;
   display: flex;
-  margin-top: 150px;
-  padding: 20px 30px;
+  margin-top: 20px;
+  padding: 10px 20px;
+  margin-left: 0%;
+  width: 100%;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .page12-image {
-  width: auto;
-  height: auto;
-  max-width: 100%;
-  max-height: 90vh;
-  
+  width: 100%;
+  height: 250px;
+  object-fit: contain;
+  margin-top: 0%;
+  margin-left: 10%;
 }
 
 .page12-text {
   position: absolute;
-  left: 121px;
+  left: 200px;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 100px;
-  font-weight: normal;
-  color: rgb(54, 58, 95);
+  font-size: 85px;
+  font-weight: 500;
+  color: #7488A8;
   z-index: 2;
   white-space: nowrap;
+  font-family: 'Cambo', serif;
+  letter-spacing: 1.5px;
 }
 
 @media (max-width: 1024px) {
   .page12-text {
-    font-size: 70px;
-    left: -60px;
+    font-size: 60px; 
+    left: 40px;
   }
 
   .page12-image {
-    max-height: 70vh;
+    max-height: 60vh;
+    height: 180px; 
   }
 }
 
@@ -131,46 +127,67 @@
     height: auto;
   }
 
-  .page12-left-section,
-  .page12-right-section {
-    width: 100%;
-    height: auto;
+  .page12-content {
+    width: 100%; 
+    padding: 15px 10px 10px 10px; 
+    background-position: top;
+    border-radius: 40px 40px 0 0; 
   }
 
-  .page12-left-section {
-    padding: 20px;
-    justify-content: center;
-    background-position: top;
+  .page12-content::before {
+    border-radius: 40px 40px 0 0; 
+    clip-path: inset(0 0 0 0 round 40px 40px 0 0); 
+  }
+
+  .page12-right-section {
+    width: 100%;
+    height: 60px; 
+    border-radius: 0 0 20px 20px;
+  }
+
+  .page12-right-section-inner {
+    height: 100%;
   }
 
   .page12-text {
     left: 10px;
     top: 10px;
-    font-size: 48px;
+    font-size: 40px; 
     transform: none;
   }
 
   .page12-image {
     max-width: 100%;
-    height: auto;
+    height: 150px; 
   }
 
   .logo-image {
-    top: 20px;
-    left: 20px;
     flex-direction: column;
     align-items: flex-start;
   }
 
   .fragmentb {
-    font-size: 20px;
+    font-size: 35px; 
   }
 }
 
 @media (max-width: 480px) {
   .page12-text {
-    font-size: 36px;
+    font-size: 30px; 
     left: 10px;
     top: 10px;
   }
-}
+
+  .page12-image {
+    height: 120px;
+  }
+
+  .fragmentb {
+    font-size: 25px; 
+  }
+
+  .logo-img12 {
+    height: 30px; 
+    width: 30px;
+  }
+};
