--- a/src/Page14.css
+++ b/src/Page14.css
@@ -6,7 +6,7 @@
   }
   
   .page14-left-section {
-    width: 78%;
+    width: 70%;
     position: relative;
     display: flex;
     align-items: center;
@@ -31,7 +31,7 @@
   
   
   .page14-right-section {
-    width: 30%;
+    width: 35%;
     background-color:rgb(54, 58, 95);
   }
   
@@ -41,22 +41,25 @@
   }
   
   .page14-image {
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 90vh;
+    width: 100%;
+    height: 250px;
+    /* max-width: 100%; */
+    /* max-height: 90vh; */
   }
   
   .page14-text {
     position: absolute;
-    left: 121px;
-    top: 19%;
-    transform: translateY(-50%);
-    font-size: 100px;
-    font-weight: bold;
-    color: rgb(54, 58, 95);
-    z-index: 2;
-    white-space: nowrap;
+  /* left: 25%; */
+  right:75%;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 85px;
+  font-weight: 500;
+  color: #7488A8;
+  z-index: 2;
+  white-space: nowrap;
+  font-family: 'Cambo', serif;
+  letter-spacing: 1.5px;
   }
   
   @media (max-width: 1024px) {
