--- a/src/Page17.css
+++ b/src/Page17.css
@@ -1,12 +1,13 @@
 .page17-container {
   display: flex;
   width: 100%;
-  height: fit-content;
+  height: 60vh;
   overflow: hidden;
+  background-color: rgb(54, 58, 95);
 }
 
 .page17-left-section {
-  width: 78.2%;
+  width: 70%;
   position: relative;
   display: flex;
   align-items: center;
@@ -14,7 +15,7 @@
   padding-left: 20px;
   overflow: hidden;
   z-index: 1;
-  /* border-radius: 30px 30px 30px 35px; */
+  border-radius: 0px 0px 70px 15px;
 }
 
 .page17-left-section::before {
@@ -28,38 +29,41 @@
   filter: blur(8px);
   opacity: 0.8;
   z-index: 0;
-    border-radius: 30px 30px 30px 35px;
-
+  border-radius: 30px 30px 30px 30px;
 }
 
-
 .page17-right-section {
-  width: 30%;
-  background-color:rgb(54, 58, 95);
+  width: 35%;
+  background-color: rgb(54, 58, 95);
+  border-radius: 0 0 30px 0;
 }
 
 .page17-image-wrapper {
   position: relative;
   display: inline-block;
+  width: 100%;
 }
 
 .page17-image {
-  width: auto;
-  height: auto;
-  max-width: 100%;
-  max-height: 90vh;
+  width: 100%;
+  height: 250px;
+  object-fit: contain;
+  margin-top:-5%;
+  margin-left: 0%;
 }
 
 .page17-plan-text {
   position: absolute;
-  right: 150px;
-  top: 20%;
+  right: 15%;
+  top: 35%;
   transform: translateY(-50%);
-  font-size: 100px;
-  font-weight: bold;
-  color:rgb(54, 58, 95);
+  font-size: 85px;
+  font-weight: 500;
+  color: #7488A8;
   z-index: 2;
   white-space: nowrap;
+  font-family: 'Cambo', serif;
+  letter-spacing: 1.5px;
 }
 
 @media (max-width: 1024px) {
@@ -89,6 +93,15 @@
     padding: 20px;
     justify-content: center;
     background-position: top;
+    border-radius: 30px 30px 0 0;
+  }
+
+  .page17-left-section::before {
+    border-radius: 30px 30px 0 0;
+  }
+
+  .page17-right-section {
+    border-radius: 0 0 30px 30px;
   }
 
   .page17-plan-text {
