--- a/src/Page21.css
+++ b/src/Page21.css
@@ -3,7 +3,9 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
+  margin-top: 0px;
+  
 }
 
 .half-page-banner {
