--- a/src/Page13.css
+++ b/src/Page13.css
@@ -27,8 +27,8 @@
   z-index: 0;
 }
 .page13-right-section {
-  width: 30%;
-  background-color: rgb(54, 58, 95);
+  width: 35%;
+  background-color: red;
 }
 .page13-image-wrapper {
   position: relative;
