--- a/src/pages/Demo.css
+++ b/src/pages/Demo.css
@@ -13,7 +13,7 @@ body, html {
   text-align: center;
   font-family: Arial, sans-serif;
   padding-top: 80px;
-  background: transparent;
+  background: white;
   width: 100%;
 }
 
